--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "dependencies": {
     "lodash": "^4.17.21",
+    "object-hash": "^2.2.0",
     "react": "^17.0.2",
     "zustand": "^3.5.7"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.172",
+    "@types/object-hash": "^2.1.1",
     "@types/react": "^17.0.15"
   }
 }
